--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "color": "^0.10.1",
     "color-convert": "^0.5.3",
     "ndpixels-convert": "^1.0.3",
-    "through2": "^2.0.0"
+    "pull-stream": "^3.1.0"
   },
   "devDependencies": {
-    "floodgate": "^0.1.2",
+    "raf": "^3.2.0",
     "rainbow-pixels": "^1.1.0"
   }
 }
